--- a/Life on Mars/Life on Mars/Base.lproj/Main.storyboard
+++ b/Life on Mars/Life on Mars/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="mMp-kA-hJQ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Z4P-eb-Ncf">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -42,10 +42,10 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Launch!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JhJ-bl-nfK">
-                                <rect key="frame" x="12" y="570" width="60" height="22"/>
+                                <rect key="frame" x="12" y="567" width="60" height="25"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="60" id="lsI-o1-Y7E"/>
-                                    <constraint firstAttribute="height" constant="22" id="y4I-ha-LTL"/>
+                                    <constraint firstAttribute="height" constant="25" id="y4I-ha-LTL"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="17"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -59,6 +59,59 @@
                                     <constraint firstAttribute="width" secondItem="3sH-wa-RYA" secondAttribute="height" multiplier="188:325" id="mBq-Qd-nKN"/>
                                 </constraints>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gTD-Du-m9o">
+                                <rect key="frame" x="307" y="595" width="52" height="52"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="52" id="Wvz-ry-NoT"/>
+                                    <constraint firstAttribute="height" constant="52" id="xge-so-5jU"/>
+                                </constraints>
+                                <state key="normal" title="Button" image="black-hole"/>
+                                <connections>
+                                    <action selector="teleportTapped:" destination="Z4P-eb-Ncf" eventType="touchUpInside" id="x3o-Ge-Wgj"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Teleport!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lzQ-wd-W6H">
+                                <rect key="frame" x="298" y="567" width="70" height="25"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="70" id="cMD-kf-WL8"/>
+                                    <constraint firstAttribute="height" constant="25" id="eKS-p7-diE"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="2yr-NB-AwI">
+                                <rect key="frame" x="67" y="270" width="240" height="128"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="3cW-hu-Hef"/>
+                                    <constraint firstAttribute="width" constant="240" id="JtA-xN-p3c"/>
+                                </constraints>
+                                <mutableString key="text">Acknowledgements
+
+Artwork from:
+http://worldartsme.com/
+
+Icons made by Freepik: http://www.freepik.com http://www.flaticon.com is licensed by: http://creativecommons.org/licenses/by/3.0/
+
+AFNetworking
+Copyright (c) 2011-2016 Alamofire Software Foundation (http://alamofire.org/)
+
+Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</mutableString>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="infoLight" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LAJ-J7-koH">
+                                <rect key="frame" x="16" y="20" width="22" height="22"/>
+                                <connections>
+                                    <action selector="infoTapped:" destination="Z4P-eb-Ncf" eventType="touchUpInside" id="mwj-Qr-gox"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -67,10 +120,18 @@
                             <constraint firstItem="3sH-wa-RYA" firstAttribute="centerX" secondItem="JA8-UG-agL" secondAttribute="centerX" id="CDw-s9-UUX"/>
                             <constraint firstItem="yoB-TS-HZp" firstAttribute="top" secondItem="yjA-I4-K8N" secondAttribute="bottom" constant="13" id="Joy-eT-My9"/>
                             <constraint firstItem="7By-xK-CMX" firstAttribute="leading" secondItem="JA8-UG-agL" secondAttribute="leadingMargin" id="LYS-b0-1rR"/>
+                            <constraint firstItem="yoB-TS-HZp" firstAttribute="top" secondItem="gTD-Du-m9o" secondAttribute="bottom" constant="20" id="Xge-rw-RSZ"/>
+                            <constraint firstItem="2yr-NB-AwI" firstAttribute="centerX" secondItem="JA8-UG-agL" secondAttribute="centerX" id="YtE-sD-4q8"/>
                             <constraint firstItem="JhJ-bl-nfK" firstAttribute="centerX" secondItem="7By-xK-CMX" secondAttribute="centerX" id="b7X-vn-jYX"/>
+                            <constraint firstItem="LAJ-J7-koH" firstAttribute="top" secondItem="wga-MW-hzI" secondAttribute="bottom" id="c6l-xG-9us"/>
+                            <constraint firstItem="gTD-Du-m9o" firstAttribute="top" secondItem="lzQ-wd-W6H" secondAttribute="bottom" constant="3" id="eWG-GS-6Ev"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="gTD-Du-m9o" secondAttribute="trailing" id="gCO-ML-q6K"/>
+                            <constraint firstItem="lzQ-wd-W6H" firstAttribute="centerX" secondItem="gTD-Du-m9o" secondAttribute="centerX" id="gHQ-Zc-7L7"/>
+                            <constraint firstItem="2yr-NB-AwI" firstAttribute="centerY" secondItem="JA8-UG-agL" secondAttribute="centerY" id="hQj-mL-nLc"/>
                             <constraint firstItem="yoB-TS-HZp" firstAttribute="top" secondItem="3sH-wa-RYA" secondAttribute="bottom" id="k48-qH-65N"/>
                             <constraint firstItem="ows-uq-e2t" firstAttribute="width" secondItem="JA8-UG-agL" secondAttribute="width" id="kRa-LI-9AW"/>
                             <constraint firstItem="7By-xK-CMX" firstAttribute="top" secondItem="JhJ-bl-nfK" secondAttribute="bottom" constant="3" id="pzO-Zm-qrY"/>
+                            <constraint firstItem="LAJ-J7-koH" firstAttribute="leading" secondItem="JA8-UG-agL" secondAttribute="leadingMargin" id="u1H-JX-JvK"/>
                             <constraint firstItem="ows-uq-e2t" firstAttribute="leading" secondItem="JA8-UG-agL" secondAttribute="leading" id="voM-JD-v9I"/>
                             <constraint firstItem="ows-uq-e2t" firstAttribute="height" secondItem="JA8-UG-agL" secondAttribute="height" multiplier="5" id="wOm-45-fDN"/>
                             <constraint firstItem="yoB-TS-HZp" firstAttribute="top" secondItem="ows-uq-e2t" secondAttribute="bottom" id="wtw-G6-LIH"/>
@@ -79,13 +140,19 @@
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="375" height="667"/>
                     <connections>
+                        <outlet property="attributionTextView" destination="2yr-NB-AwI" id="Egy-Ge-c84"/>
                         <outlet property="backgroundBottomConstraint" destination="wtw-G6-LIH" id="P5T-5I-hFo"/>
                         <outlet property="backgroundImage" destination="ows-uq-e2t" id="iva-3a-ZFS"/>
                         <outlet property="fireHeightConstraint" destination="yDq-Mg-ML6" id="0sn-f0-KWk"/>
                         <outlet property="fireImage" destination="yjA-I4-K8N" id="Cpr-Zb-WsN"/>
+                        <outlet property="infoButton" destination="LAJ-J7-koH" id="iMP-SL-RDz"/>
+                        <outlet property="launchLabel" destination="JhJ-bl-nfK" id="Ed6-LG-AB6"/>
+                        <outlet property="redButton" destination="7By-xK-CMX" id="Qv1-b0-HTr"/>
                         <outlet property="rocketBottomConstraint" destination="k48-qH-65N" id="ldo-rV-hMJ"/>
                         <outlet property="rocketHeightConstraint" destination="KGc-YH-nkm" id="UNh-Zc-iqb"/>
                         <outlet property="rocketImage" destination="3sH-wa-RYA" id="suU-Xk-1ZS"/>
+                        <outlet property="teleportButton" destination="gTD-Du-m9o" id="VEQ-Ed-ZgO"/>
+                        <outlet property="teleportLabel" destination="lzQ-wd-W6H" id="t03-HQ-XkD"/>
                         <segue destination="mMp-kA-hJQ" kind="show" identifier="segueToSpace" id="SI9-BM-xwa"/>
                     </connections>
                 </viewController>
@@ -384,6 +451,7 @@
     <resources>
         <image name="Red_button" width="191" height="177"/>
         <image name="backgroundnew" width="1200" height="5375"/>
+        <image name="black-hole" width="512" height="512"/>
         <image name="fire 2" width="100" height="146"/>
         <image name="floppydisk" width="512" height="512"/>
         <image name="mars no background" width="1200" height="675"/>
